# cc.licenserdf

./: .gitignore  .gitmodules  MANIFEST.in  Pipfile  README.md  bootstrap.py  buildout.cfg  setup.py
cc/licenserdf/licenses/: Makefile.am  creativecommons.org_licenses_GPL_2.0_.rdf  creativecommons.org_licenses_LGPL_2.1_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_at_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_be_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_br_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_ca_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_cl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_de_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_fr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_hr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_it_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_jp_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_kr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_nl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_pl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_tw_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_uk_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_za_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_jp_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ar_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_bg_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_br_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ca_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ch_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_cn_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_co_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_dk_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_hr_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_hu_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_il_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_in_.rdf  (+457 more)
license_rdf/: Makefile.am  creativecommons.org_licenses_GPL_2.0_.rdf  creativecommons.org_licenses_LGPL_2.1_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_at_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_be_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_br_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_ca_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_cl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_de_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_fr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_hr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_it_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_jp_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_kr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_nl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_pl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_tw_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_uk_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_za_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_jp_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ar_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_bg_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_br_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ca_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_ch_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_cn_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_co_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_dk_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_hr_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_hu_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_il_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_in_.rdf  (+404 more)
licenses/: by-nc-nd_3.0_pr.html  by-nc-sa_3.0_pr.html  by-nc_3.0_pr.html  by-nd_3.0_pr.html  by-sa_3.0_pr.html  by_3.0_pr.html
localdev/: compare_rdfs.sh  nuke_it_from_orbit.sh
rdf/: creativecommons.org_licenses_GPL_2.0_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_at_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_be_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_br_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_ca_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_cl_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_fr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_hr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_it_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_jp_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_kr_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_uk_.rdf  creativecommons.org_licenses_by-nc-nd_2.0_za_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_es_.rdf  creativecommons.org_licenses_by-nc-nd_2.1_jp_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_au_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_co_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_dk_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_il_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_mk_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_mx_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_pe_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_pt_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_se_.rdf  creativecommons.org_licenses_by-nc-nd_2.5_tw_.rdf  creativecommons.org_licenses_by-nc-nd_3.0_.rdf  creativecommons.org_licenses_by-nc-nd_3.0_lu_.rdf  creativecommons.org_licenses_by-nc-nd_3.0_us_.rdf  creativecommons.org_licenses_by-nc-sa_1.0_nl_.rdf  creativecommons.org_licenses_by-nc-sa_2.0_.rdf  creativecommons.org_licenses_by-nc-sa_2.0_cl_.rdf  (+160 more)
tools/: add.py  jurisdiction.py  (+6 more)
(+35171 files in other folders)
