# Creative Commons has made the contents of this file
# available under a CC-GNU-LGPL license:
#
# http://creativecommons.org/licenses/LGPL/2.1/
#
# A copy of the full license can be found as part of this
# distribution in the file COPYING.
# 
# You may use the liblicense software in accordance with the
# terms of that license. You agree that you are solely 
# responsible for your use of the liblicense software and you
# represent and warrant to Creative Commons that your use
# of the liblicense software will comply with the CC-GNU-LGPL.
#
# Copyright 2007, Creative Commons, www.creativecommons.org.
# Copyright 2007, Jason Kivlighn.

licensesdir = $(pkgdatadir)/licenses
dist_licenses_DATA = \
	creativecommons.org_licenses_by_1.0_fi_.rdf \
	creativecommons.org_licenses_by_1.0_il_.rdf \
	creativecommons.org_licenses_by_1.0_nl_.rdf \
	creativecommons.org_licenses_by_1.0_.rdf \
	creativecommons.org_licenses_by_2.0_at_.rdf \
	creativecommons.org_licenses_by_2.0_au_.rdf \
	creativecommons.org_licenses_by_2.0_be_.rdf \
	creativecommons.org_licenses_by_2.0_br_.rdf \
	creativecommons.org_licenses_by_2.0_ca_.rdf \
	creativecommons.org_licenses_by_2.0_cl_.rdf \
	creativecommons.org_licenses_by_2.0_de_.rdf \
	creativecommons.org_licenses_by_2.0_es_.rdf \
	creativecommons.org_licenses_by_2.0_fr_.rdf \
	creativecommons.org_licenses_by_2.0_hr_.rdf \
	creativecommons.org_licenses_by_2.0_it_.rdf \
	creativecommons.org_licenses_by_2.0_jp_.rdf \
	creativecommons.org_licenses_by_2.0_kr_.rdf \
	creativecommons.org_licenses_by_2.0_nl_.rdf \
	creativecommons.org_licenses_by_2.0_pl_.rdf \
	creativecommons.org_licenses_by_2.0_.rdf \
	creativecommons.org_licenses_by_2.0_tw_.rdf \
	creativecommons.org_licenses_by_2.0_uk_.rdf \
	creativecommons.org_licenses_by_2.0_za_.rdf \
	creativecommons.org_licenses_by_2.1_au_.rdf \
	creativecommons.org_licenses_by_2.1_es_.rdf \
	creativecommons.org_licenses_by_2.1_jp_.rdf \
	creativecommons.org_licenses_by_2.5_ar_.rdf \
	creativecommons.org_licenses_by_2.5_au_.rdf \
	creativecommons.org_licenses_by_2.5_bg_.rdf \
	creativecommons.org_licenses_by_2.5_br_.rdf \
	creativecommons.org_licenses_by_2.5_ca_.rdf \
	creativecommons.org_licenses_by_2.5_ch_.rdf \
	creativecommons.org_licenses_by_2.5_cn_.rdf \
	creativecommons.org_licenses_by_2.5_co_.rdf \
	creativecommons.org_licenses_by_2.5_dk_.rdf \
	creativecommons.org_licenses_by_2.5_es_.rdf \
	creativecommons.org_licenses_by_2.5_hr_.rdf \
	creativecommons.org_licenses_by_2.5_hu_.rdf \
	creativecommons.org_licenses_by_2.5_il_.rdf \
	creativecommons.org_licenses_by_2.5_in_.rdf \
	creativecommons.org_licenses_by_2.5_it_.rdf \
	creativecommons.org_licenses_by_2.5_mk_.rdf \
	creativecommons.org_licenses_by_2.5_mt_.rdf \
	creativecommons.org_licenses_by_2.5_mx_.rdf \
	creativecommons.org_licenses_by_2.5_my_.rdf \
	creativecommons.org_licenses_by_2.5_nl_.rdf \
	creativecommons.org_licenses_by_2.5_pe_.rdf \
	creativecommons.org_licenses_by_2.5_pl_.rdf \
	creativecommons.org_licenses_by_2.5_pt_.rdf \
	creativecommons.org_licenses_by_2.5_.rdf \
	creativecommons.org_licenses_by_2.5_scotland_.rdf \
	creativecommons.org_licenses_by_2.5_se_.rdf \
	creativecommons.org_licenses_by_2.5_si_.rdf \
	creativecommons.org_licenses_by_2.5_tw_.rdf \
	creativecommons.org_licenses_by_2.5_za_.rdf \
	creativecommons.org_licenses_by_3.0_.rdf \
	creativecommons.org_licenses_by_3.0_us_.rdf \
	creativecommons.org_licenses_by-nc_1.0_fi_.rdf \
	creativecommons.org_licenses_by-nc_1.0_il_.rdf \
	creativecommons.org_licenses_by-nc_1.0_nl_.rdf \
	creativecommons.org_licenses_by-nc_1.0_.rdf \
	creativecommons.org_licenses_by-nc_2.0_at_.rdf \
	creativecommons.org_licenses_by-nc_2.0_au_.rdf \
	creativecommons.org_licenses_by-nc_2.0_be_.rdf \
	creativecommons.org_licenses_by-nc_2.0_br_.rdf \
	creativecommons.org_licenses_by-nc_2.0_ca_.rdf \
	creativecommons.org_licenses_by-nc_2.0_cl_.rdf \
	creativecommons.org_licenses_by-nc_2.0_de_.rdf \
	creativecommons.org_licenses_by-nc_2.0_es_.rdf \
	creativecommons.org_licenses_by-nc_2.0_fr_.rdf \
	creativecommons.org_licenses_by-nc_2.0_hr_.rdf \
	creativecommons.org_licenses_by-nc_2.0_it_.rdf \
	creativecommons.org_licenses_by-nc_2.0_jp_.rdf \
	creativecommons.org_licenses_by-nc_2.0_kr_.rdf \
	creativecommons.org_licenses_by-nc_2.0_nl_.rdf \
	creativecommons.org_licenses_by-nc_2.0_pl_.rdf \
	creativecommons.org_licenses_by-nc_2.0_.rdf \
	creativecommons.org_licenses_by-nc_2.0_tw_.rdf \
	creativecommons.org_licenses_by-nc_2.0_uk_.rdf \
	creativecommons.org_licenses_by-nc_2.0_za_.rdf \
	creativecommons.org_licenses_by-nc_2.1_au_.rdf \
	creativecommons.org_licenses_by-nc_2.1_es_.rdf \
	creativecommons.org_licenses_by-nc_2.1_jp_.rdf \
	creativecommons.org_licenses_by-nc_2.5_ar_.rdf \
	creativecommons.org_licenses_by-nc_2.5_au_.rdf \
	creativecommons.org_licenses_by-nc_2.5_bg_.rdf \
	creativecommons.org_licenses_by-nc_2.5_br_.rdf \
	creativecommons.org_licenses_by-nc_2.5_ca_.rdf \
	creativecommons.org_licenses_by-nc_2.5_ch_.rdf \
	creativecommons.org_licenses_by-nc_2.5_cn_.rdf \
	creativecommons.org_licenses_by-nc_2.5_co_.rdf \
	creativecommons.org_licenses_by-nc_2.5_dk_.rdf \
	creativecommons.org_licenses_by-nc_2.5_es_.rdf \
	creativecommons.org_licenses_by-nc_2.5_hr_.rdf \
	creativecommons.org_licenses_by-nc_2.5_hu_.rdf \
	creativecommons.org_licenses_by-nc_2.5_il_.rdf \
	creativecommons.org_licenses_by-nc_2.5_in_.rdf \
	creativecommons.org_licenses_by-nc_2.5_it_.rdf \
	creativecommons.org_licenses_by-nc_2.5_mk_.rdf \
	creativecommons.org_licenses_by-nc_2.5_mt_.rdf \
	creativecommons.org_licenses_by-nc_2.5_mx_.rdf \
	creativecommons.org_licenses_by-nc_2.5_my_.rdf \
	creativecommons.org_licenses_by-nc_2.5_nl_.rdf \
	creativecommons.org_licenses_by-nc_2.5_pe_.rdf \
	creativecommons.org_licenses_by-nc_2.5_pl_.rdf \
	creativecommons.org_licenses_by-nc_2.5_pt_.rdf \
	creativecommons.org_licenses_by-nc_2.5_.rdf \
	creativecommons.org_licenses_by-nc_2.5_scotland_.rdf \
	creativecommons.org_licenses_by-nc_2.5_se_.rdf \
	creativecommons.org_licenses_by-nc_2.5_si_.rdf \
	creativecommons.org_licenses_by-nc_2.5_tw_.rdf \
	creativecommons.org_licenses_by-nc_2.5_za_.rdf \
	creativecommons.org_licenses_by-nc_3.0_.rdf \
	creativecommons.org_licenses_by-nc_3.0_us_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_at_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_au_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_be_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_br_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_ca_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_cl_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_de_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_es_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_fr_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_hr_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_it_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_jp_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_kr_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_nl_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_pl_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_tw_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_uk_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.0_za_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.1_au_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.1_es_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.1_jp_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_ar_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_au_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_bg_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_br_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_ca_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_ch_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_cn_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_co_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_dk_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_es_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_hr_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_hu_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_il_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_in_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_it_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_mk_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_mt_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_mx_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_my_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_nl_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_pe_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_pl_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_pt_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_scotland_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_se_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_si_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_tw_.rdf \
	creativecommons.org_licenses_by-nc-nd_2.5_za_.rdf \
	creativecommons.org_licenses_by-nc-nd_3.0_.rdf \
	creativecommons.org_licenses_by-nc-nd_3.0_us_.rdf \
	creativecommons.org_licenses_by-nc-sa_1.0_fi_.rdf \
	creativecommons.org_licenses_by-nc-sa_1.0_il_.rdf \
	creativecommons.org_licenses_by-nc-sa_1.0_nl_.rdf \
	creativecommons.org_licenses_by-nc-sa_1.0_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_at_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_au_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_be_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_br_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_ca_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_cl_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_de_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_es_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_fr_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_hr_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_it_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_jp_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_kr_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_nl_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_pl_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_tw_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_uk_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.0_za_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.1_au_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.1_es_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.1_jp_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_ar_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_au_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_bg_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_br_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_ca_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_ch_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_cn_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_co_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_dk_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_es_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_hr_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_hu_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_il_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_in_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_it_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_mk_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_mt_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_mx_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_my_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_nl_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_pe_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_pl_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_pt_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_scotland_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_se_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_si_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_tw_.rdf \
	creativecommons.org_licenses_by-nc-sa_2.5_za_.rdf \
	creativecommons.org_licenses_by-nc-sa_3.0_.rdf \
	creativecommons.org_licenses_by-nc-sa_3.0_us_.rdf \
	creativecommons.org_licenses_by-nd_1.0_fi_.rdf \
	creativecommons.org_licenses_by-nd_1.0_il_.rdf \
	creativecommons.org_licenses_by-nd_1.0_nl_.rdf \
	creativecommons.org_licenses_by-nd_1.0_.rdf \
	creativecommons.org_licenses_by-nd_2.0_at_.rdf \
	creativecommons.org_licenses_by-nd_2.0_au_.rdf \
	creativecommons.org_licenses_by-nd_2.0_be_.rdf \
	creativecommons.org_licenses_by-nd_2.0_br_.rdf \
	creativecommons.org_licenses_by-nd_2.0_ca_.rdf \
	creativecommons.org_licenses_by-nd_2.0_cl_.rdf \
	creativecommons.org_licenses_by-nd_2.0_de_.rdf \
	creativecommons.org_licenses_by-nd_2.0_es_.rdf \
	creativecommons.org_licenses_by-nd_2.0_fr_.rdf \
	creativecommons.org_licenses_by-nd_2.0_hr_.rdf \
	creativecommons.org_licenses_by-nd_2.0_it_.rdf \
	creativecommons.org_licenses_by-nd_2.0_jp_.rdf \
	creativecommons.org_licenses_by-nd_2.0_kr_.rdf \
	creativecommons.org_licenses_by-nd_2.0_nl_.rdf \
	creativecommons.org_licenses_by-nd_2.0_pl_.rdf \
	creativecommons.org_licenses_by-nd_2.0_.rdf \
	creativecommons.org_licenses_by-nd_2.0_tw_.rdf \
	creativecommons.org_licenses_by-nd_2.0_uk_.rdf \
	creativecommons.org_licenses_by-nd_2.0_za_.rdf \
	creativecommons.org_licenses_by-nd_2.1_au_.rdf \
	creativecommons.org_licenses_by-nd_2.1_es_.rdf \
	creativecommons.org_licenses_by-nd_2.1_jp_.rdf \
	creativecommons.org_licenses_by-nd_2.5_ar_.rdf \
	creativecommons.org_licenses_by-nd_2.5_au_.rdf \
	creativecommons.org_licenses_by-nd_2.5_bg_.rdf \
	creativecommons.org_licenses_by-nd_2.5_br_.rdf \
	creativecommons.org_licenses_by-nd_2.5_ca_.rdf \
	creativecommons.org_licenses_by-nd_2.5_ch_.rdf \
	creativecommons.org_licenses_by-nd_2.5_cn_.rdf \
	creativecommons.org_licenses_by-nd_2.5_co_.rdf \
	creativecommons.org_licenses_by-nd_2.5_dk_.rdf \
	creativecommons.org_licenses_by-nd_2.5_es_.rdf \
	creativecommons.org_licenses_by-nd_2.5_hr_.rdf \
	creativecommons.org_licenses_by-nd_2.5_hu_.rdf \
	creativecommons.org_licenses_by-nd_2.5_il_.rdf \
	creativecommons.org_licenses_by-nd_2.5_in_.rdf \
	creativecommons.org_licenses_by-nd_2.5_it_.rdf \
	creativecommons.org_licenses_by-nd_2.5_mk_.rdf \
	creativecommons.org_licenses_by-nd_2.5_mt_.rdf \
	creativecommons.org_licenses_by-nd_2.5_mx_.rdf \
	creativecommons.org_licenses_by-nd_2.5_my_.rdf \
	creativecommons.org_licenses_by-nd_2.5_nl_.rdf \
	creativecommons.org_licenses_by-nd_2.5_pe_.rdf \
	creativecommons.org_licenses_by-nd_2.5_pl_.rdf \
	creativecommons.org_licenses_by-nd_2.5_pt_.rdf \
	creativecommons.org_licenses_by-nd_2.5_.rdf \
	creativecommons.org_licenses_by-nd_2.5_scotland_.rdf \
	creativecommons.org_licenses_by-nd_2.5_se_.rdf \
	creativecommons.org_licenses_by-nd_2.5_si_.rdf \
	creativecommons.org_licenses_by-nd_2.5_tw_.rdf \
	creativecommons.org_licenses_by-nd_2.5_za_.rdf \
	creativecommons.org_licenses_by-nd_3.0_.rdf \
	creativecommons.org_licenses_by-nd_3.0_us_.rdf \
	creativecommons.org_licenses_by-nd-nc_1.0_fi_.rdf \
	creativecommons.org_licenses_by-nd-nc_1.0_il_.rdf \
	creativecommons.org_licenses_by-nd-nc_1.0_nl_.rdf \
	creativecommons.org_licenses_by-nd-nc_1.0_.rdf \
	creativecommons.org_licenses_by-nd-nc_2.0_jp_.rdf \
	creativecommons.org_licenses_by-sa_1.0_fi_.rdf \
	creativecommons.org_licenses_by-sa_1.0_il_.rdf \
	creativecommons.org_licenses_by-sa_1.0_nl_.rdf \
	creativecommons.org_licenses_by-sa_1.0_.rdf \
	creativecommons.org_licenses_by-sa_2.0_at_.rdf \
	creativecommons.org_licenses_by-sa_2.0_au_.rdf \
	creativecommons.org_licenses_by-sa_2.0_be_.rdf \
	creativecommons.org_licenses_by-sa_2.0_br_.rdf \
	creativecommons.org_licenses_by-sa_2.0_ca_.rdf \
	creativecommons.org_licenses_by-sa_2.0_cl_.rdf \
	creativecommons.org_licenses_by-sa_2.0_de_.rdf \
	creativecommons.org_licenses_by-sa_2.0_es_.rdf \
	creativecommons.org_licenses_by-sa_2.0_fr_.rdf \
	creativecommons.org_licenses_by-sa_2.0_hr_.rdf \
	creativecommons.org_licenses_by-sa_2.0_it_.rdf \
	creativecommons.org_licenses_by-sa_2.0_jp_.rdf \
	creativecommons.org_licenses_by-sa_2.0_kr_.rdf \
	creativecommons.org_licenses_by-sa_2.0_nl_.rdf \
	creativecommons.org_licenses_by-sa_2.0_pl_.rdf \
	creativecommons.org_licenses_by-sa_2.0_.rdf \
	creativecommons.org_licenses_by-sa_2.0_tw_.rdf \
	creativecommons.org_licenses_by-sa_2.0_uk_.rdf \
	creativecommons.org_licenses_by-sa_2.0_za_.rdf \
	creativecommons.org_licenses_by-sa_2.1_au_.rdf \
	creativecommons.org_licenses_by-sa_2.1_es_.rdf \
	creativecommons.org_licenses_by-sa_2.1_jp_.rdf \
	creativecommons.org_licenses_by-sa_2.5_ar_.rdf \
	creativecommons.org_licenses_by-sa_2.5_au_.rdf \
	creativecommons.org_licenses_by-sa_2.5_bg_.rdf \
	creativecommons.org_licenses_by-sa_2.5_br_.rdf \
	creativecommons.org_licenses_by-sa_2.5_ca_.rdf \
	creativecommons.org_licenses_by-sa_2.5_ch_.rdf \
	creativecommons.org_licenses_by-sa_2.5_cn_.rdf \
	creativecommons.org_licenses_by-sa_2.5_co_.rdf \
	creativecommons.org_licenses_by-sa_2.5_dk_.rdf \
	creativecommons.org_licenses_by-sa_2.5_es_.rdf \
	creativecommons.org_licenses_by-sa_2.5_hr_.rdf \
	creativecommons.org_licenses_by-sa_2.5_hu_.rdf \
	creativecommons.org_licenses_by-sa_2.5_il_.rdf \
	creativecommons.org_licenses_by-sa_2.5_in_.rdf \
	creativecommons.org_licenses_by-sa_2.5_it_.rdf \
	creativecommons.org_licenses_by-sa_2.5_mk_.rdf \
	creativecommons.org_licenses_by-sa_2.5_mt_.rdf \
	creativecommons.org_licenses_by-sa_2.5_mx_.rdf \
	creativecommons.org_licenses_by-sa_2.5_my_.rdf \
	creativecommons.org_licenses_by-sa_2.5_nl_.rdf \
	creativecommons.org_licenses_by-sa_2.5_pe_.rdf \
	creativecommons.org_licenses_by-sa_2.5_pl_.rdf \
	creativecommons.org_licenses_by-sa_2.5_pt_.rdf \
	creativecommons.org_licenses_by-sa_2.5_.rdf \
	creativecommons.org_licenses_by-sa_2.5_scotland_.rdf \
	creativecommons.org_licenses_by-sa_2.5_se_.rdf \
	creativecommons.org_licenses_by-sa_2.5_si_.rdf \
	creativecommons.org_licenses_by-sa_2.5_tw_.rdf \
	creativecommons.org_licenses_by-sa_2.5_za_.rdf \
	creativecommons.org_licenses_by-sa_3.0_.rdf \
	creativecommons.org_licenses_by-sa_3.0_us_.rdf \
	creativecommons.org_licenses_devnations_2.0_.rdf \
	creativecommons.org_licenses_GPL_2.0_.rdf \
	creativecommons.org_licenses_LGPL_2.1_.rdf \
	creativecommons.org_licenses_nc_1.0_fi_.rdf \
	creativecommons.org_licenses_nc_1.0_nl_.rdf \
	creativecommons.org_licenses_nc_1.0_.rdf \
	creativecommons.org_licenses_nc_2.0_jp_.rdf \
	creativecommons.org_licenses_nc-sa_1.0_fi_.rdf \
	creativecommons.org_licenses_nc-sa_1.0_nl_.rdf \
	creativecommons.org_licenses_nc-sa_1.0_.rdf \
	creativecommons.org_licenses_nc-sa_2.0_jp_.rdf \
	creativecommons.org_licenses_nc-sampling+_1.0_.rdf \
	creativecommons.org_licenses_nc-sampling+_1.0_tw_.rdf \
	creativecommons.org_licenses_nd_1.0_fi_.rdf \
	creativecommons.org_licenses_nd_1.0_nl_.rdf \
	creativecommons.org_licenses_nd_1.0_.rdf \
	creativecommons.org_licenses_nd_2.0_jp_.rdf \
	creativecommons.org_licenses_nd-nc_1.0_fi_.rdf \
	creativecommons.org_licenses_nd-nc_1.0_nl_.rdf \
	creativecommons.org_licenses_nd-nc_1.0_.rdf \
	creativecommons.org_licenses_nd-nc_2.0_jp_.rdf \
	creativecommons.org_licenses_publicdomain_.rdf \
	creativecommons.org_licenses_sa_1.0_fi_.rdf \
	creativecommons.org_licenses_sa_1.0_nl_.rdf \
	creativecommons.org_licenses_sa_1.0_.rdf \
	creativecommons.org_licenses_sa_2.0_jp_.rdf \
	creativecommons.org_licenses_sampling_1.0_br_.rdf \
	creativecommons.org_licenses_sampling+_1.0_br_.rdf \
	creativecommons.org_licenses_sampling+_1.0_de_.rdf \
	creativecommons.org_licenses_sampling_1.0_.rdf \
	creativecommons.org_licenses_sampling+_1.0_.rdf \
	creativecommons.org_licenses_sampling_1.0_tw_.rdf \
	creativecommons.org_licenses_sampling+_1.0_tw_.rdf
